cmake_minimum_required(VERSION 3.5)

project (solarix)

#add_subdirectory (./demo/ai/solarix/argon/ParseText/Parser)
add_subdirectory (./demo/ai/solarix/ygres/mapper)
add_subdirectory (./demo/ai/solarix/engines/lemmatizator)
add_subdirectory (./demo/ai/solarix/engines)
add_subdirectory (./demo/ai/solarix/syntax)
add_subdirectory (./demo/ai/solarix/lexicon)
add_subdirectory (./demo/ai/solarix/ygres/compiler)
